--- a/conference/index.html
+++ b/conference/index.html
@@ -12,18 +12,7 @@
   <title>SayWhat / Conference</title>
   <meta content='' name='description'>
 
-  <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
-
-  <!-- / Typekit -->
-  <script src='http://use.typekit.com/gyr1oql.js' type='text/javascript'></script>
-  <script>
-    //<![CDATA[
-      try{Typekit.load();}catch(e){}
-    //]]>
-  </script>
-
-  <meta content="authenticity_token" name="csrf-param" />
-  <meta content="GlxvlS0pisHL0bx/tQLLVevUdUTT5mf7VhlOFG+uF1E=" name="csrf-token" />
+  <link href="/stylesheets/style.min.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
