namespace css files

--- a/conference/index.html
+++ b/conference/index.html
@@ -12,7 +12,7 @@
   <title>SayWhat / Conference</title>
   <meta content='' name='description'>
 
-  <link href="/stylesheets/style.min.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/dist/conference.min.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
