--- a/summits/index.html
+++ b/summits/index.html
@@ -55,7 +55,7 @@
 
               <p>This year's Say What! Summits will focus on environmental prevention strategies that can be implemented in your area, and statewide, to reduce the harmful effects of tobacco use in Texas.</p>
 
-              <p>Funding for the Say What! Texas Tobacco-Free Summits from the Department of State Health Services allows TxSSC to offer these elite training opportunities <strong>FREE OF CHARGE</strong> to participating groups. We will cover your registration, training materials, lodging and meals; the group covers transportation.</p>
+              <p>Funding for the Say What! Texas Tobacco-Free Summits comes from the Department of State Health Services allows TxSSC to offer these elite training opportunities <strong>FREE OF CHARGE</strong> to participating groups. We will cover your registration, training materials, lodging and meals; the group covers transportation.</p>
 
               <p>Space is limited so register early to ensure your spot!</p>
 
@@ -171,7 +171,7 @@
 
               <p>Say What! Summit activity sessions are facilitated by the Texas Teen Ambassadors and are based on an interactive model that include individual leadership development, small group team building, and commitment to a larger cause through activities and discussions involving all participants.</p>
 
-              <p>Informational sessions are based on the latest research released by nation partners in tobacco control and prevention, but are developed with the input of, and delivered by, the Texas Teen Ambassadors to ensure that the information is relevant to youth and young adults today and easy to comprehend.</p>
+              <p>Informational sessions are based on the latest research released by national partners in tobacco control and prevention, but are developed with the input of, and delivered by, the Texas Teen Ambassadors to ensure that the information is relevant to youth and young adults today and easy to comprehend.</p>
 
             </div>
           </div>
