--- a/summits/index.html
+++ b/summits/index.html
@@ -166,6 +166,11 @@
           <div class="row">
             <div class="span11">
               <h2>What To Expect</h2>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="span5">
 
               <p>The Say What! movement was developed by youth and continues to be a youth-lead movement.</p>
 
@@ -173,6 +178,10 @@
 
               <p>Informational sessions are based on the latest research released by national partners in tobacco control and prevention, but are developed with the input of, and delivered by, the Texas Teen Ambassadors to ensure that the information is relevant to youth and young adults today and easy to comprehend.</p>
 
+            </div>
+
+            <div class="span6 video">
+              <iframe src="http://player.vimeo.com/video/50688703?title=0&amp;byline=0&amp;portrait=0" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
           </div>
 
