update menu and wording

--- a/summits/index.html
+++ b/summits/index.html
@@ -25,10 +25,12 @@
 
         <ul class="nav">
           <li><a href="http://txsaywhat.com" title="Home">Home</a></li>
+          <li><a href="http://txsaywhat.com/coalitions" title="Coalitions">Coalitions</a></li>
           <li><a href="http://txsaywhat.com/groups" title="Groups">Groups</a></li>
           <li><a href="http://txsaywhat.com/projects" title="Projects">Projects</a></li>
           <li><a href="http://txsaywhat.com/history" title="History">History</a></li>
           <li><a href="http://txsaywhat.com/leon" title="Who is Leon?">Leon</a></li>
+          <li><a href="http://events.txsaywhat.com/resources" title="Resources">Resources</a></li>
           <li><a href="http://txsaywhat.com/ttfkd" title="Texas Tobacco Free Kids Day">TTFKD</a></li>
           <li><a href="http://events.txsaywhat.com/summits" title="Say What Summits">Summits</a></li>
           <li><a href="http://events.txsaywhat.com/conference" title="Say What Conference">Conference</a></li>
@@ -221,7 +223,7 @@
 
                   <p class="cite"><i>* from <a href="http://www.surgeongeneral.gov/library/reports/tobaccosmoke/index.html">How Tobacco Smoke Causes Disease: a Report of the Surgeon General</a></i></p>
 
-                  <p>These finding will help guide the information delivered to students at the 2013 Say What! Summits as well as aid in developing specific plans of action to combat these issues in local communities and on a statewide level.</p>
+                  <p>These findings will help guide the information delivered to students at the 2013 Say What! Summits as well as aid in developing specific plans of action to combat these issues in local communities and on a statewide level.</p>
 
                 </div>
 
