--- a/summits/index.html
+++ b/summits/index.html
@@ -28,12 +28,32 @@
           <li><a href="http://txsaywhat.com/coalitions" title="Coalitions">Coalitions</a></li>
           <li><a href="http://txsaywhat.com/groups" title="Groups">Groups</a></li>
           <li><a href="http://txsaywhat.com/projects" title="Projects">Projects</a></li>
-          <li><a href="http://txsaywhat.com/history" title="History">History</a></li>
-          <li><a href="http://txsaywhat.com/leon" title="Who is Leon?">Leon</a></li>
-          <li><a href="http://events.txsaywhat.com/resources" title="Resources">Resources</a></li>
-          <li><a href="http://txsaywhat.com/ttfkd" title="Texas Tobacco Free Kids Day">TTFKD</a></li>
-          <li><a href="http://events.txsaywhat.com/summits" title="Say What Summits">Summits</a></li>
-          <li><a href="http://events.txsaywhat.com/conference" title="Say What Conference">Conference</a></li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              About
+              <b class="caret"></b>
+            </a>
+
+            <ul class="dropdown-menu">
+              <li><a href="http://txsaywhat.com/history" title="History">History</a></li>
+              <li><a href="http://txsaywhat.com/leon" title="Who is Leon?">Leon</a></li>
+              <li><a href="http://events.txsaywhat.com/resources" title="Resources">Resources</a></li>
+            </ul>
+          </li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Events
+              <b class="caret"></b>
+            </a>
+
+            <ul class="dropdown-menu">
+              <li><a href="http://txsaywhat.com/ttfkd" title="Texas Tobacco Free Kids Day">TTFKD</a></li>
+              <li><a href="http://events.txsaywhat.com/summits" title="Say What Summits">Summits</a></li>
+              <li><a href="http://events.txsaywhat.com/conference" title="Say What Conference">Conference</a></li>
+            </ul>
+          </li>
         </ul>
 
       </div>
@@ -242,7 +262,6 @@
 
   </div>
 
-  <script src="/javascripts/plugins/foundation.min.js"></script>
-  <script src="/javascripts/summits/application.js"></script>
+  <script src="/javascripts/summits/bundle.js"></script>
 </body>
 </html>
