fix resources link

--- a/summits/index.html
+++ b/summits/index.html
@@ -38,7 +38,7 @@
             <ul class="dropdown-menu">
               <li><a href="http://txsaywhat.com/history" title="History">History</a></li>
               <li><a href="http://txsaywhat.com/leon" title="Who is Leon?">Leon</a></li>
-              <li><a href="http://events.txsaywhat.com/resources" title="Resources">Resources</a></li>
+              <li><a href="http://resources.txsaywhat.com" title="Resources">Resources</a></li>
             </ul>
           </li>
 
