--- a/summits/index.html
+++ b/summits/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  
+
   <title>SayWhat / Summits</title>
   <meta content='' name='description'>
 
@@ -113,18 +113,21 @@
                       <div class="td date">January <span>25 - 26, 2013</span></div>
                       <div class="td location">North East Texas</div>
                       <div class="td venue">Sky Ranch <span>Van, Texas</span></div>
+                      <div class="td deadline">Register by January 11</div>
                     </div>
 
                     <div class="tr cf">
                       <div class="td date">February <span>1 - 2, 2013</span></div>
                       <div class="td location">South Texas</div>
                       <div class="td venue">Camp Zephyr <span>Sandia, Texas</span></div>
+                      <div class="td deadline">Register by January 18</div>
                     </div>
 
                     <div class="tr cf last alt">
                       <div class="td date">February <span>8 - 9, 2013</span></div>
                       <div class="td location">Central Texas</div>
                       <div class="td venue">Mo Ranch <span>Hunt, Texas</span></div>
+                      <div class="td deadline">Register by January 11</div>
                     </div>
                   </div>
 
@@ -138,18 +141,21 @@
                       <div class="td date">February <span>15 - 16, 2013</span></div>
                       <div class="td location">West Texas</div>
                       <div class="td venue">Prude Ranch <span>Fort Davis, Texas</span></div>
+                      <div class="td deadline">Register by February 1</div>
                     </div>
 
                     <div class="tr cf">
                       <div class="td date">February <span>22 - 23, 2013</span></div>
                       <div class="td location">North Central Texas</div>
                       <div class="td venue">Riverbend Retreat <span>Glen Rose, Texas</span></div>
+                      <div class="td deadline">Register by February 11</div>
                     </div>
 
                     <div class="tr cf last alt">
                       <div class="td date">March <span>1 - 2, 2013</span></div>
                       <div class="td location">South East Texas</div>
                       <div class="td venue">Pineywoods Retreat <span>Woodlake, Texas</span></div>
+                      <div class="td deadline">Register by February 18</div>
                     </div>
                   </div>
                 </div>
@@ -224,7 +230,7 @@
                     <li>Smokeless tobacco use among White males and cigar smoking among Black females has actually increased</li>
                     <li>A combination of mass media campaigns, price increases (including those from tax increases), school-based policies and programs and statewide or community-wide changes in smoke free policies and norms are the most effective combination for reducing initiation, prevalence and intensity of smoking among youth.</li>
                   </ul>
-                  
+
                   <p class="cite"><i>* from <a href="http://www.surgeongeneral.gov/library/reports/preventing-youth-tobacco-use/index.html">Preventing Tobacco Use Among Youth and Young Adults: A Report of the Surgeon General</a></i></p>
 
                   <ul>
@@ -256,7 +262,7 @@
           </div>
 
         </div>
-        
+
       </section>
     </div>
 
