--- a/summits/index.html
+++ b/summits/index.html
@@ -209,7 +209,7 @@
             </div>
 
             <div class="span6 video">
-              <iframe src="http://player.vimeo.com/video/50688703?title=0&amp;byline=0&amp;portrait=0" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+              <iframe src="http://player.vimeo.com/video/52169786?title=0&amp;byline=0&amp;portrait=0&amp;badge=0" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
           </div>
 
