--- a/summits/index.html
+++ b/summits/index.html
@@ -113,7 +113,7 @@
                       <div class="td date">January <span>25 - 26, 2013</span></div>
                       <div class="td location">North East Texas</div>
                       <div class="td venue">Sky Ranch <span>Van, Texas</span></div>
-                      <div class="td deadline">Register by January 11</div>
+                      <div class="td deadline"><span style="color:red;">CLOSED</span></div>
                     </div>
 
                     <div class="tr cf">
